[gd_scene load_steps=18 format=3 uid="uid://ber51jx1s2k4r"]

[ext_resource type="Script" path="res://MapBattle/simulator_screen.gd" id="1_bt6gg"]
[ext_resource type="PackedScene" uid="uid://lax3nu7ewcbb" path="res://MapBattle/game_over_screen.tscn" id="2_y8i23"]
[ext_resource type="Script" path="res://MapBattle/cell_list.gd" id="2_ygf70"]
[ext_resource type="PackedScene" uid="uid://bl4674e320gdi" path="res://Supports/ability_sign.tscn" id="3_5ps7e"]
[ext_resource type="PackedScene" uid="uid://bib8m4np5nhvm" path="res://Supports/map_cell.tscn" id="3_jc48y"]
[ext_resource type="Script" path="res://MapBattle/simulator_state_machine.gd" id="3_so1bb"]
[ext_resource type="Texture2D" uid="uid://burqpvvsd1obp" path="res://Assets/finish_point.png" id="4_adg2f"]
[ext_resource type="Script" path="res://MapBattle/simulator_state_setup_char.gd" id="4_dhc7l"]
[ext_resource type="Script" path="res://MapBattle/simulator_state_move_each.gd" id="6_yux77"]
[ext_resource type="Script" path="res://MapBattle/simulator_state_nothing.gd" id="7_2yl1d"]
[ext_resource type="Texture2D" uid="uid://bne7e5qmgasxc" path="res://Assets/ricefield-5121505_1920.jpg" id="7_rsgka"]
[ext_resource type="PackedScene" uid="uid://co083ulqvfwoj" path="res://Supports/dice.tscn" id="8_y26bi"]
[ext_resource type="FontFile" uid="uid://dnqu1umxi2wl0" path="res://Assets/VonwaonBitmap-16px.ttf" id="14_7cmvw"]
[ext_resource type="PackedScene" uid="uid://bvtwaf64ibtk8" path="res://MapBattle/introduction_screen.tscn" id="14_xg1wi"]
[ext_resource type="PackedScene" uid="uid://of2atyshwxhm" path="res://MapBattle/selection_screen.tscn" id="19_slojg"]

[sub_resource type="Gradient" id="Gradient_8rjpn"]
colors = PackedColorArray(0.0529, 0.129643, 0.23, 0.666667, 0.0506, 0.12834, 0.23, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_xi4tw"]
gradient = SubResource("Gradient_8rjpn")
width = 128
fill_from = Vector2(0.5, 0)
metadata/_snap_enabled = true

[node name="SimulatorScreen" type="Node2D"]
script = ExtResource("1_bt6gg")
GameOverScreenSample = ExtResource("2_y8i23")
SelectionScreenSample = ExtResource("19_slojg")
IntroductionScreenSample = ExtResource("14_xg1wi")
AbilitySignSample = ExtResource("3_5ps7e")
DiceSample = ExtResource("8_y26bi")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground"]
modulate = Color(0.4814, 0.4814, 0.58, 1)
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_rsgka")
expand_mode = 1
stretch_mode = 3

[node name="CellList" type="Node2D" parent="." node_paths=PackedStringArray("ordered_cell_node_list")]
script = ExtResource("2_ygf70")
ordered_cell_node_list = [NodePath("MapCell23"), NodePath("MapCell24"), NodePath("MapCell"), NodePath("MapCell2"), NodePath("MapCell3"), NodePath("MapCell4"), NodePath("MapCell5"), NodePath("MapCell6"), NodePath("MapCell7"), NodePath("MapCell8"), NodePath("MapCell9"), NodePath("MapCell10"), NodePath("MapCell11"), NodePath("MapCell12"), NodePath("MapCell13"), NodePath("MapCell14"), NodePath("MapCell15"), NodePath("MapCell16"), NodePath("MapCell17"), NodePath("MapCell18"), NodePath("MapCell19"), NodePath("MapCell20"), NodePath("MapCell21"), NodePath("MapCell22")]
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="MapCell" parent="CellList" instance=ExtResource("3_jc48y")]
position = Vector2(824, 112)

[node name="MapCell2" parent="CellList" instance=ExtResource("3_jc48y")]
position = Vector2(800, 272)

[node name="MapCell3" parent="CellList" instance=ExtResource("3_jc48y")]
position = Vector2(592, 312)

[node name="MapCell4" parent="CellList" instance=ExtResource("3_jc48y")]
position = Vector2(456, 408)

[node name="MapCell5" parent="CellList" instance=ExtResource("3_jc48y")]
position = Vector2(256, 392)

[node name="MapCell6" parent="CellList" instance=ExtResource("3_jc48y")]
position = Vector2(80, 464)

[node name="MapCell7" parent="CellList" instance=ExtResource("3_jc48y")]
position = Vector2(-80, 504)
type = 2

[node name="MapCell8" parent="CellList" instance=ExtResource("3_jc48y")]
position = Vector2(-272, 512)
type = 2

[node name="MapCell9" parent="CellList" instance=ExtResource("3_jc48y")]
position = Vector2(-456, 488)
type = 2

[node name="MapCell10" parent="CellList" instance=ExtResource("3_jc48y")]
position = Vector2(-608, 392)
type = 2

[node name="MapCell11" parent="CellList" instance=ExtResource("3_jc48y")]
position = Vector2(-736, 256)
type = 2

[node name="MapCell12" parent="CellList" instance=ExtResource("3_jc48y")]
position = Vector2(-808, 80)
type = 2

[node name="MapCell13" parent="CellList" instance=ExtResource("3_jc48y")]
position = Vector2(-752, -96)
type = 3

[node name="MapCell14" parent="CellList" instance=ExtResource("3_jc48y")]
position = Vector2(-608, -200)
type = 3

[node name="MapCell15" parent="CellList" instance=ExtResource("3_jc48y")]
position = Vector2(-472, -288)
type = 3

[node name="MapCell16" parent="CellList" instance=ExtResource("3_jc48y")]
position = Vector2(-320, -352)
type = 3

[node name="MapCell17" parent="CellList" instance=ExtResource("3_jc48y")]
position = Vector2(-136, -408)
type = 3

[node name="MapCell18" parent="CellList" instance=ExtResource("3_jc48y")]
position = Vector2(56, -416)
type = 3

[node name="MapCell19" parent="CellList" instance=ExtResource("3_jc48y")]
position = Vector2(248, -400)
type = 4

[node name="MapCell20" parent="CellList" instance=ExtResource("3_jc48y")]
position = Vector2(440, -376)
type = 4

[node name="MapCell21" parent="CellList" instance=ExtResource("3_jc48y")]
position = Vector2(632, -312)
type = 4

[node name="MapCell22" parent="CellList" instance=ExtResource("3_jc48y")]
position = Vector2(808, -232)
type = 4

[node name="Sprite2D2" type="Sprite2D" parent="CellList/MapCell22"]
position = Vector2(0, -32)
scale = Vector2(0.25, 0.25)
texture = ExtResource("4_adg2f")

[node name="MapCell23" parent="CellList" instance=ExtResource("3_jc48y")]
position = Vector2(944, -144)
type = 4

[node name="MapCell24" parent="CellList" instance=ExtResource("3_jc48y")]
position = Vector2(840, -48)
type = 4

[node name="Camera2D" type="Camera2D" parent="."]
process_mode = 3
limit_left = -1536
limit_top = -1024
limit_right = 1536
limit_bottom = 1024
limit_smoothed = true
position_smoothing_enabled = true

[node name="SimulatorStateMachine" type="Node" parent="." node_paths=PackedStringArray("Outside_SimulatorScreen", "Outside_CellList", "curr_state")]
script = ExtResource("3_so1bb")
Outside_SimulatorScreen = NodePath("..")
Outside_CellList = NodePath("../CellList")
curr_state = NodePath("StateSetupChar")

[node name="StateSetupChar" type="Node" parent="SimulatorStateMachine"]
script = ExtResource("4_dhc7l")

[node name="OrderTimer" type="Timer" parent="SimulatorStateMachine/StateSetupChar"]
one_shot = true

[node name="StateMoveEach" type="Node" parent="SimulatorStateMachine"]
script = ExtResource("6_yux77")

[node name="OrderTimer" type="Timer" parent="SimulatorStateMachine/StateMoveEach"]
one_shot = true

[node name="StateNothing" type="Node" parent="SimulatorStateMachine"]
script = ExtResource("7_2yl1d")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 64.0
grow_vertical = 2
texture = SubResource("GradientTexture2D_xi4tw")

[node name="PlayerList" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 55.0
offset_top = 55.0
offset_right = 55.0
offset_bottom = 55.0

[node name="ButtonList" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -448.0
offset_top = -64.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 16
alignment = 2

[node name="StartButton" type="Button" parent="CanvasLayer/ButtonList"]
process_mode = 3
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("14_7cmvw")
theme_override_font_sizes/font_size = 24
text = "Start"

[node name="StopButton" type="Button" parent="CanvasLayer/ButtonList"]
process_mode = 3
visible = false
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("14_7cmvw")
theme_override_font_sizes/font_size = 24
text = "Stop"

[node name="RestartButton" type="Button" parent="CanvasLayer/ButtonList"]
process_mode = 3
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("14_7cmvw")
theme_override_font_sizes/font_size = 24
text = "Restart"

[node name="LineEdit" type="LineEdit" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -88.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("14_7cmvw")
theme_override_font_sizes/font_size = 24
text = "1.0"
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -192.0
offset_top = 8.0
offset_right = -88.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("14_7cmvw")
theme_override_font_sizes/font_size = 24
text = "Speed"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AbilityContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -192.0
offset_top = 24.0
offset_right = 192.0
offset_bottom = 64.0
grow_horizontal = 2

[connection signal="ability_activated" from="CellList" to="." method="_on_cell_list_ability_activated"]
[connection signal="rank_changed" from="CellList" to="." method="_on_cell_list_rank_changed"]
[connection signal="timeout" from="SimulatorStateMachine/StateSetupChar/OrderTimer" to="SimulatorStateMachine/StateSetupChar" method="_on_order_timer_timeout"]
[connection signal="timeout" from="SimulatorStateMachine/StateMoveEach/OrderTimer" to="SimulatorStateMachine/StateMoveEach" method="_on_order_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/ButtonList/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonList/StopButton" to="." method="_on_stop_button_pressed"]
[connection signal="pressed" from="CanvasLayer/ButtonList/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="text_submitted" from="CanvasLayer/LineEdit" to="." method="_on_line_edit_text_submitted"]
